# nb2-fast-deploy

./: #启动.bat  #更新所有插件.bat  #进入虚拟环境.bat  #配置向导.bat  #配置环境.bat  .env  .env.prod  .gitattribute  .gitattributes  .gitignore  README.md  _configure  _run  _upd-plugin  _venv  bot.py  pyproject.toml
.github/workflows/: lock-deps.yml
src/plugins/: ping.py
src/util/: configure.py  const.py  run.py  update_all_plugins.py  utils.py
util/: update_all_plugins.py
