[tool.pdm]

[project]
name = "nb2-oneclick"
version = "0.1.0"
description = "A NoneBot2 starter pack."
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = [
    "pip>=23.0.1",
    "setuptools>=67.6.0",
    "nb-cli>=1.0.5",
    "nonebot2[fastapi]>=2.0.0rc3",
    "nonebot-adapter-onebot>=2.2.2",
]
requires-python = ">=3.8"
license = { text = "MIT" }
readme = "README.md"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = []
plugin_dirs = ["src/plugins"]

# 要加载的前置插件（一键包提供的配置项）
# 这些插件会在 plugins 前面加载，当插件 require 报错时可以使用
preload_plugins = []
